[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scenes/objects/Interactable.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/rooms/TestScene.gd" type="Script" id=3]

[node name="TestScene" type="Node2D"]
script = ExtResource( 3 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 510.164, 299.208 )
scale = Vector2( 15.9988, 9.31789 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Interactable1" parent="." instance=ExtResource( 2 )]
position = Vector2( 784.088, 67.2211 )
scale = Vector2( 2.24809, 7.05693 )

[node name="icon" type="Sprite" parent="."]
visible = false
position = Vector2( 170.921, 489.086 )
scale = Vector2( 1.18623, 1.36419 )
texture = ExtResource( 1 )

[node name="Interactable2" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 133.759, 446.659 )
scale = Vector2( 1.18623, 1.36419 )
[connection signal="pressed" from="Interactable1" to="." method="_on_Interactable1_pressed"]
[connection signal="pressed" from="Interactable2" to="." method="_on_Interactable2_pressed"]
